Updated YAML files

--- a/inst/extdata/livestock_class_conversion.yaml
+++ b/inst/extdata/livestock_class_conversion.yaml
@@ -6,6 +6,7 @@ livestock_conversions:
         - cattle
     pigs:
         - pigs
+        - fattening_pigs
     sows:
         - sows
         - piglets
