--- a/inst/extdata/storage_N2O.yaml
+++ b/inst/extdata/storage_N2O.yaml
@@ -4,7 +4,7 @@ storage_N2O_EF:
       EF: 0
     slurry_with_crust:
       EF: 0.01
-    solid_manure_heaps:
+    solid:
       EF: 0.02
 
   cattle:
@@ -12,27 +12,27 @@ storage_N2O_EF:
       EF: 0
     slurry_with_crust:
       EF: 0.01
-    solid_manure_heaps:
+    solid:
       EF: 0.02
 
   pigs:
     slurry_without_crust:
       EF: 0
-    solid_manure_heaps:
+    solid:
       EF: 0.01
 
   sheeps:
-    solid_manure_heaps:
+    solid:
       EF: 0.02
 
   goats:
-    solid_manure_heaps:
+    solid:
       EF: 0.02
 
   horses:
-    solid_manure_heaps:
+    solid:
       EF: 0.02
 
   birds:
-    solid_manure_heaps:
+    solid:
       EF: 0.002
