--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: rEMEP
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Title: EMEP inventorying for manure management systems (NH3, N2O, NOx)
+Version: 0.1
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+    person("João", "Serra", , "jserra@agro.au.dk", role = c("aut", "cre"))
+Description: GHG Inventorying using EMEP for manure management systems
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
 Encoding: UTF-8
