--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,8 @@ License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+Depends: R (>= 3.5.0)
+Imports:
+    R6 (>= 2.5.0),
+    yaml (>= 2.3.0)
+DataDir: inst/extdata
