--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: rEMEP
-Title: EMEP inventorying for manure management systems (NH3, N2O, NOx)
+Title: EMEP Inventorying for Manure Management Systems (NH3, N2O, NOx)
 Version: 0.1
 Authors@R: 
     person("João", "Serra", , "jserra@agro.au.dk", role = c("aut", "cre"))
-Description: GHG Inventorying using EMEP for manure management systems
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+Description: GHG Inventorying using EMEP methodology for manure management systems.
+    Provides tools for calculating emissions from different stages of manure management
+    including housing, storage, application, and grazing.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
@@ -13,4 +14,3 @@ Depends: R (>= 3.5.0)
 Imports:
     R6 (>= 2.5.0),
     yaml (>= 2.3.0)
-DataDir: inst/extdata
